# DIT572Engine

./: .gitignore  BUILD.bat  CMakeLists.txt  README.md
engine/: CMakeLists.txt
engine/include/Engine/: AnimationManager.h  AssetManager.h  CollisionManager.h  Core.h  Engine.h  EventManager.h  GameObject.h  InputManager.h  Layer.h  Material.h  Mesh.h  PhysicsManager.h  Renderer.h  Scene.h  Shader.h  SoundManager.h  Texture.h  Time.h  WindowManager.h
engine/include/Engine/Components/: Animator.h  BoxCollider2D.h  Camera.h  Collider2D.h  Component.h  Model.h  RenderComponent.h  RigidBody2D.h  Sprite.h  Transform.h
engine/include/Engine/Event/: Event.h
engine/src/: AnimationManager.cpp  AssetManager.cpp  CollisionManager.cpp  Core.cpp  EventManager.cpp  InputManager.cpp  PhysicsManager.cpp  Renderer.cpp  SoundManager.cpp  WindowManager.cpp
engine/src/Components/: Animator.cpp  BoxCollider2D.cpp  Camera.cpp  RigidBody2D.cpp  Sprite.cpp  Transform.cpp
game/: CMakeLists.txt
game/Assets/: fDefault.fs  vDefault.vs
game/Assets/Sprites/: grass_stone.piskel
game/Assets/Sprites/Slime/Animations/reinforce/: slime_reinforce-20260219-014029.piskel
game/Assets/Sprites/Slime/idle/: slime_idle-20260218-131318.piskel
game/Assets/Sprites/Slime/landing/: slime_landing-20260218-130959.piskel
game/Assets/Sprites/Slime/landing_idle/: slime_land_idle-20260219-015445.piskel
game/Assets/Sprites/Slime/start_jump/: slime_start_jump.piskel
game/Assets/shaders/: fDefault.frag  fDefault.spv  fPostFX.frag  fPostFX.spv  vDefault.spv  vDefault.vert  vPostFX.spv  vPostFX.vert
game/include/Game/: GameLayer.h  GameScene.h  World.h
game/src/: GameLayer.cpp  GameScene.cpp  World.cpp  main.cpp
server/: CMakeLists.txt
server/include/Server/: Level.h
server/src/: Level.cpp  main.cpp
